# metalband

./: .gitignore  README.md  flake.nix  pyproject.toml
data/monperrus/: monperrus.tsv
data/survey/: conf_auth_name_year.tsv  papers.txt
metalband/: cap_death_year.py  create_taxa.py  doi_search_openalex.py  find_last_cited_dblp.py  find_last_cited_paper_openalex.py  format_oalex_db.py  format_paper_data.py  json_data.py  main.py  oalex_by_taxa.py  papers_by_taxa.py  parse_dblp_papers.py  plot_oalex.py  plot_taxa.py  test.py
outputs/monperrus/: monperrus-last_cited.tsv  monperrus-queried.tsv  monperrus-queried_with_citations.tsv  old-monperrus-queried.tsv  papers.tsv
outputs/oalex/: oalex-copy.tsv  oalex.tsv  oalex_papers.tsv
outputs/survey/: death_times.tsv  doi.tsv  main.tsv  merged.tsv  output_citations.tsv
