[project]
name = "metalband"
version = "0.1.0"
description = "metalband"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.4.0",
    "matplotlib>=3.10.6",
    "pyalex>=0.18",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "urllib3>=2.2.3",
]

[project.scripts]
main = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]

